# opencode-session-manager-cli

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  pyproject.toml
src/ocsm/: cli.py  db.py  format.py  queries.py
tests/: test_realdb_scenarios.py  test_sync_e2e.py
