[project]
name = "ocsm"
version = "0.2.1"
description = "OpenCode Sessions Manager CLI"
requires-python = ">=3.10"
dependencies = [
    "typer>=0.15.0",
    "rich>=13.0.0",
]

[project.scripts]
ocsm = "ocsm.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ocsm"]
